--- a/style.css
+++ b/style.css
@@ -421,6 +421,7 @@ nav img {
   font-size: 2rem;
   margin-bottom: 2rem;
   padding-left: 260px;
+  text-align: left;
 }
 
 @media (max-width: 1024px) {
@@ -532,4 +533,5 @@ nav img {
     font-size: 0.85rem;
   }
 }
+
 
